--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -33,7 +33,7 @@
           <div class="col-sm-11">
             <select name="queue" class="form-control" data-placeholder="Select queue">
               {{#each queues}}
-              <option value="{{name}}">{{name}}</option>
+              <option value="{{name}}" {{selected}}>{{name}}</option>
               {{/each}}
             </select>
           </div>
