Remove some padding from the wells.

--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -8,7 +8,7 @@
     </label>
   </div>
   <div class="col-xs-8 col-md-10">
-    <div class="well well-sm" style="text-align: left;">{{message}}</div>
+    <div class="well well-sm note-well" style="text-align: left;">{{message}}</div>
   </div>
 </div>
 {{else}}
