Don't scroll the window when clicking the status dropdown.

--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -26,7 +26,7 @@
   </td>
   <td>
     <div class="dropdown" data-ticket="{{_id}}">
-      <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" name="statusButton" aria-expanded="false">{{status}}<span class="caret"></span></button>
+      <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" name="statusButton" aria-expanded="false">{{status}}<span class="caret dropdown-toggle"></span></button>
       <ul class="dropdown-menu" name="statusMenu" role="menu" aria-labelledby="ticketStatusDropdown">
         <li role="presentation"><a role="menuitem" tabindex="-1">Open</a></li>
         <li role="presentation"><a role="menuitem" tabindex="-1">Closed</a></li>
