--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -1,5 +1,15 @@
 <template name="queue">
 <div class="col-xs-12 col-sm-10">
+  {{#if alpha}}
+  <div class="row">
+    <div class="alert alert-warning">
+      Triage is currently an <strong>alpha</strong> product. Some features may not yet be implemented and some bugs may be present. 
+      In the meantime, feel free to use Triage however you like - any attempts to break features are welcomed. 
+      Please submit any feature requests, bug reports, comments, or snide remarks to the "Triage Meta" queue. 
+      <a href="https://waffle.io/uk-as-hive/Triage">View the roadmap here.</a>
+    </div>
+  </div>
+  {{/if}}
   <div class="row">
     {{#unless connected}}
     <div class="alert alert-danger">
