--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -63,7 +63,9 @@
         </td>
         <td>
           {{#each attachmentIds}}
+          {{#if file.thumbnail}}
           <img style="max-width: 64px; max-height:24px;" src="/file/{{file.thumbnail}}" />
+          {{/if}}
           <a data-action="downloadAttachment" href="/file/{{file.filenameOnDisk}}">{{file.filename}}</a><br />
           {{/each}}
         </td>
