--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -16,7 +16,7 @@
   <div class="col-xs-8 col-xs-offset-4 col-md-10 col-md-offset-2">
     {{#if changeIsType 'attachment'}}
     {{#with otherId}}
-    <img style="max-width: 100%; max-height: 128px" src="/file/{{file.filenameOnDisk}}"/><br/>
+    <img style="max-width: 100%; max-height: 128px" src="/file/{{file.thumbnail}}"/><br/>
     {{/with}}
     <small style="font-size: 0.7em;">User {{authorName}} {{message}} @ {{timestamp}}</small>
     {{else}}
