--- a/client/views/ticket/ticket.html
+++ b/client/views/ticket/ticket.html
@@ -8,11 +8,13 @@ No ticket found.
     {{> ticketHeading}}
   </div>
   <div class="panel-body">
+    <label for="title">Title:</label>
     <blockquote>
       <strong>
         {{title}}
       </strong>
     </blockquote>
+    <label for="body">Body:</label>
     <blockquote>
       {{body}}
     </blockquote>
