--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -43,7 +43,7 @@
           {{#if admin}}
           <div class="assign-user-field">
             <span class="icon glyphicon glyphicon-plus"></span>
-            <input type="text" name="assignUser" placeholder="Assign User" data-toggle="tooltip" data-trigger="manual" title="User not found.">
+            {{>inputAutocomplete settings=settings name="assignUser" placeholder="Assign User" data-toggle="tooltip" data-trigger="manual" title="User not found."}}
           </div>
           {{/if}}
           {{#each associatedUserIds}}
@@ -108,11 +108,11 @@
 </template>
 
 <template name="ticketHeading">
-<div class="col-md-3 col-xs-6">
-  <div class="col-xs-3">
+<div class="col-md-4 col-xs-8">
+  <div class="col-xs-4 col-md-2">
     {{>userPortrait userId=this.authorId class="user-image"}}
   </div>
-  <div class="col-xs-9">
+  <div class="col-xs-8 col-md-10">
     <strong>
       {{author.displayName}}<br>
       {{author.department}}<br>
@@ -120,7 +120,7 @@
     </strong>
   </div>
 </div>
-<div class="col-md-3 col-md-offset-6 col-xs-6" style="text-align: right; float: right;">
+<div class="col-md-4 col-md-offset-4 col-xs-4" style="text-align: right; float: right;">
   <a href="/ticket/{{ticketNumber}}">#{{ticketNumber}}</a><br>
   <strong>{{queueName}}</strong><br>
   {{>timestampFormatter date=submittedTimestamp}}<br>
