Gmail-style pagination.

--- a/client/app.css
+++ b/client/app.css
@@ -1,3 +1,12 @@
+body {
+  overflow-y: scroll;
+}
+
+.half-padding {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 /***************************** PREFS MESSAGE *****************************/
 
 .saved-preferences {
