Slight change to fromNow time dependency and a clearer name.

--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -34,7 +34,7 @@
       </ul>
     </div>
   </td>
-  <td>{{>timeParser date=submittedTimestamp}}</td>
+  <td>{{>timeFromNow date=submittedTimestamp}}</td>
 </tr>
 <tr>
   <td colspan='6' class="hiddenRow">
