Safer way of displaying multi-line ticket bodies.

--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -46,7 +46,9 @@
         <div class="panel-body ticket-row-panel-body">
 
           <blockquote>
-            {{body}}
+            {{#each bodyParagraph}}
+            <p>{{this}}</p>
+            {{/each}}
           </blockquote>
 
           {{> ticketInfoTable}}
