--- a/client/views/ticket/ticket.html
+++ b/client/views/ticket/ticket.html
@@ -16,7 +16,9 @@ No ticket found.
     </blockquote>
     <label for="body">Body:</label>
     <blockquote>
-      {{body}}
+      {{#each bodyParagraph}}
+        <p>{{this}}</p>
+      {{/each}}
     </blockquote>
 
     {{> ticketInfoTable}}
