--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -5,7 +5,7 @@
     <div class="alert alert-warning">
       Triage is currently an <strong>alpha</strong> product. Some features may not yet be implemented and some bugs may be present. 
       In the meantime, feel free to use Triage however you like - any attempts to break features are welcomed. 
-      Please submit any feature requests, bug reports, or comments to the "Triage Meta" queue. 
+      Please submit any feature requests, bug reports, or comments to the "App Dev" queue with the "Triage" tag.
       <a href="https://waffle.io/uk-as-hive/Triage">View the roadmap here.</a>
     </div>
   </div>
