--- a/client/views/modals/ticketModal/ticketModal.html
+++ b/client/views/modals/ticketModal/ticketModal.html
@@ -7,6 +7,7 @@
         <h4 class="modal-title">Add a Ticket</h4>
       </div>
       <div class="modal-body">
+        <p class="text-center error">{{errorText}}</p>
         <form>
           <div class="form-group">
             <label for="onBehalfOf" class="control-label">Submit on Behalf Of:</label>
