--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -28,27 +28,24 @@
   {{#if addingTicket}}
   <hr>
   <div class="row top-buffer">
-    <div class="col-sm-6">
-      <div class="form-horizontal">
-        <div class="form-group">
-          <label for="body" class="col-sm-1 control-label">Title:</label>
-          <div class="col-sm-11">
-            {{>inputAutocomplete settings=settings name="newTicket" class="form-control"}}
-          </div>
-        </div>
-        {{#if psuedoqueue}}
-        <div class="form-group">
-          <label for="queue" class="col-sm-1 control-label">Queue:</label>
-          <div class="col-sm-11">
-            <select name="queue" class="form-control" data-placeholder="Select queue">
-              {{#each queues}}
-              <option value="{{name}}" {{selected}}>{{name}}</option>
-              {{/each}}
-            </select>
-          </div>
-        </div>
-        {{/if}}
+    <div class="form-inline">
+      <div class="form-group">
+        <label for="body" class="control-label">Title:</label>
+        {{>inputAutocomplete settings=settings name="newTicket" class="form-control quick-add-input"}}
       </div>
+      <div class="form-group">
+        <label for="status" class="control-label">Status:</label>
+        <input type="text" class="form-control quick-add-status-input" name="newTicketStatus" value="Open">
+      </div>
+      <div class="form-group">
+        <label for="queue" class="control-label">Queue:</label>
+        <select name="queue" class="form-control" data-placeholder="Select queue">
+          {{#each queues}}
+          <option value="{{name}}" {{selected}}>{{name}}</option>
+          {{/each}}
+        </select>
+      </div>
+      <button type="button" name="quickAddTicket" class="btn btn-primary">Add</button>
     </div>
   </div>
   {{/if}}
