--- a/client/app.css
+++ b/client/app.css
@@ -338,6 +338,29 @@ body {
   color: #fff;
 }
 
+.add-attachment-btn {
+  width: 40px;
+  height: 40px;
+  background: #bbb;
+  border: none;
+  font-size: 10pt;
+  color: #000;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  white-space: nowrap;
+  position: relative;
+
+  -webkit-transition: width .55s ease;
+  -moz-transition: width .55s ease;
+  -ms-transition: width .55s ease;
+  -o-transition: width .55s ease;
+  transition: width .55s ease;
+}
+
+.add-attachment-btn:hover .icon {
+  color: #fff;
+}
 
 .ticket-requester-portrait{
   float: left;
