--- a/client/views/queue/sidebar/sidebar.html
+++ b/client/views/queue/sidebar/sidebar.html
@@ -84,5 +84,29 @@
     </div>
   </div>
 </div>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+      <span name="userCollapse" class="glyphicon glyphicon-chevron-down"></span><a data-toggle="collapse" href="#userCollapse">Associated User</a>
+    </h4>
+  </div>
+  <div id="userCollapse" class="panel-collapse collapse in">
+    <div class="panel-body">
+      {{#each associatedUsers}}
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" data-field="user" checked="{{checked}}">{{> userPortrait userId=name class="in-row"}} {{username}} ({{count}})
+        </label>
+      </div>
+      {{/each}}
+      {{#each zeroCountUsers}}
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" data-field="user" checked={{checked}}>{{username}} ({{count}})
+        </label>
+      </div>
+      {{/each}}
+    </div>
+  </div>
+</div>
 </template>
-
