Show a real visible count for Closed tickets when not filtering.

--- a/client/views/queue/sidebar/sidebar.html
+++ b/client/views/queue/sidebar/sidebar.html
@@ -44,7 +44,7 @@
       {{#with closed}}
       <div class="checkbox">
         <label>
-          <input type="checkbox" data-field="status">{{name}}
+          <input type="checkbox" data-field="status">{{name}} ({{count}})
         </label>
       </div>
       {{/with}}
