--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -15,12 +15,14 @@
 <div class="row">
   <div class="col-xs-8 col-xs-offset-4 col-md-10 col-md-offset-2">
     {{#if changeIsType 'attachment'}}
-    {{#with otherId}}
-    <img style="max-width: 100%; max-height: 128px" src="/file/{{file.thumbnail}}"/><br/>
-    {{/with}}
-    <small style="font-size: 0.7em;">User {{authorName}} {{message}} @ {{timestamp}}</small>
-    {{else}}
-    <small style="font-size: 0.7em;">User {{authorName}} {{message}} @ {{timestamp}}</small>
+      {{#with otherId}}
+        {{#if file.thumbnail}}
+          <img style="max-width: 100%; max-height: 128px" src="/file/{{file.thumbnail}}"/><br/>
+        {{/if}}
+      {{/with}}
+      <small style="font-size: 0.7em;">User {{authorName}} {{message}} @ {{timestamp}}</small>
+      {{else}}
+      <small style="font-size: 0.7em;">User {{authorName}} {{message}} @ {{timestamp}}</small>
     {{/if}}
   </div>
 </div>
@@ -78,10 +80,17 @@
           </div>
 
           {{#each attachmentIds}}
-          {{#if file.thumbnail}}
-          <img style="max-width: 64px; max-height:24px;" src="/file/{{file.thumbnail}}" />
-          {{/if}}
-          <a data-action="downloadAttachment" href="/file/{{file.filenameOnDisk}}" target="_blank">{{file.filename}}</a><br />
+            <div class="attachment">
+              <div class="attachment-link">
+              {{#if file.thumbnail}}
+                <img style="max-width: 64px; max-height:24px;" src="/file/{{file.thumbnail}}" />
+              {{/if}}
+                <a data-action="downloadAttachment" href="/file/{{file.filenameOnDisk}}" target="_blank">{{file.filename}}</a><br />
+              </div>
+              <div class="remove-attachment">
+                <a href="#" data-action="removeAttachment">Remove</a>
+              </div>
+            </div>
           {{/each}}
         </td>
       </tr>
@@ -95,9 +104,9 @@
   <div class="col-xs-12 col-md-10 col-md-offset-2">
     <div class="input-group">
       {{#if admin}}
-      {{> inputAutocomplete name="newNoteAdmin" class="form-control" placeholder="Add a new note..." settings=settings data-ticket=_id }}
+        {{> inputAutocomplete name="newNoteAdmin" class="form-control" placeholder="Add a new note..." settings=settings data-ticket=_id }}
       {{else}}
-      <input class="form-control" placeholder="Add a new note..." name="newNote" data-ticket="{{_id}}">
+        <input class="form-control" placeholder="Add a new note..." name="newNote" data-ticket="{{_id}}">
       {{/if}}
       <div class="input-group-btn">
         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="False">Attach File <span class="caret"></span></button>
@@ -141,4 +150,23 @@
   {{>timestampFormatter date=submittedTimestamp}}<br>
   {{>timeFromNow date=submittedTimestamp}}
 </div>
+</template>
+
+<template name="removeAttachmentModal">
+  <div class="modal fade in" id="removeAttachmentModal" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Remove Attachment</h4>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to remove attachment <strong>{{attachment.filename}}</strong> from ticket <strong>#{{ticket.ticketNumber}}</strong>? This action cannot be undone.
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
+          <button class="btn btn-danger pull-right" data-action="removeAttachment">Confirm</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </template>
