Clear queue badge when clicking queue name in queue bar.

--- a/client/views/nav/queuebar/queuebar.html
+++ b/client/views/nav/queuebar/queuebar.html
@@ -10,7 +10,7 @@
     <ul class="nav navbar-nav">
       {{#each queue}}
         <li class="{{active}}">
-          <a href="/queue/{{name}}">{{name}} 
+          <a name="{{name}}" href="/queue/{{name}}">{{name}} 
             {{#if count}} <span class="label label-danger label-as-badge">{{count}} new</span>{{/if}}
           </a>
         </li>
