--- a/client/views/modals/ticketModal/ticketModal.html
+++ b/client/views/modals/ticketModal/ticketModal.html
@@ -35,6 +35,19 @@
             </div>
           </div>
           <div class="form-group">
+            <label for="attachments" class="control-label">Attach files:</label>
+            <div>
+              <button type="button" class="btn btn-primary" data-action="uploadFile">Upload File</button>
+            </div>
+            {{#each files}}
+              <div>
+                <a href="#" data-action="removeAttachment"><span data-file="{{_id}}" style="color: red;" class="glyphicon glyphicon-remove"></span></a>
+                {{#if thumbnail}} <img class="img-thumbnail" style="max-width: 100%; max-height: 32px;" src="/file/{{thumbnail}}" /> {{/if}}
+                {{filename}}&nbsp;
+              </div>
+            {{/each}}
+          </div>
+          <div class="form-group">
             <label for="queueName" class="control-label">Queue:</label>
             <div>
               <select name="queue" class="form-control" data-placeholder="Select queue">
