--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -3,7 +3,11 @@
 <div class="row">
   <div class="col-xs-4 col-md-2">
     <label for="note-{{_id}}" class="control-label pull-right">
-      {{> userPortrait userId=authorId class="user-image"}}
+      {{#if authorId}}
+        {{> userPortrait userId=authorId class="user-image"}}
+      {{else}}
+        {{authorEmail}} (via e-mail)
+      {{/if}}
       <small style="font-size: 0.7em; font-weight: lighter;">{{>timeFromNow date=timestamp}}</small>
     </label>
   </div>
