--- a/client/views/userDashboard/userDashboard.html
+++ b/client/views/userDashboard/userDashboard.html
@@ -11,6 +11,21 @@
     </select>
   </div>
   <div class="form-group">
+    <label for="emails" class="control-label">Email Addresses:</label><br>
+    <small>
+      Email responses to tickets will be ingested from emails added here. Add as many as you'd like - emails will only be sent to the primary email address associated with your account.
+    </small>
+    {{#each user.emails}}
+      <p>
+        <a href="#" data-action="removeEmail" data-email="{{this}}"><span class="glyphicon glyphicon-remove" style="color: red;" data-email="{{this}}"></span></a> {{this}}
+      </p>
+    {{/each}}
+    <div class="input-group col-md-6">
+      <input type="email" name="newEmail" class="form-control" placeholder="Add a new email address" data-toggle="popover" data-trigger="manual" data-content="Invalid email address." data-placement="left">
+      <span class="input-group-btn"><button type="button" class="btn btn-primary" data-action="addEmail"><span class="glyphicon glyphicon-plus"></span></button></span>
+    </div>
+  </div>
+  <div class="form-group">
     <label for="authorPreferences" class="control-label">If I am the author of a ticket, notify me when:</label>
     {{>settingsCheckbox name="submitted" option="I submit the ticket" setting=notificationSettings.submitted}}
     {{>settingsCheckbox name="authorSelfNote" option="I leave a note on the ticket" setting=notificationSettings.authorSelfNote}}
@@ -25,7 +40,7 @@
     {{>settingsCheckbox name="associatedStatusChanged" option="The status of the ticket changes" setting=notificationSettings.associatedStatusChanged}}
     {{>settingsCheckbox name="associatedAttachment" option="An attachment is added to the ticket" setting=notificationSettings.associatedAttachment}}
   </div>
-  <div id="savedMessage" class="pull-right">
+  <div id="saved-message" class="pull-right">
     {{#if saved}}
       <span class="saved-preferences">Preferences saved. </span>
     {{/if}}
