Reverting a class change that was broken by a find/replace.

--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -31,7 +31,7 @@
 
 <template name="ticketInfoTable">
 <div class="row">
-  <table class="table table-img-thumbnail">
+  <table class="table table-bordered">
     <thead>
       <tr>
         <th width="33%">Assigned Users</th>
