--- a/client/app.css
+++ b/client/app.css
@@ -221,6 +221,7 @@ body {
   white-space: nowrap;
   position: relative;
 }
+
 .assign-user-field input {
   width: 40px;
   height: 40px;
@@ -257,6 +258,7 @@ body {
 
 .assign-user-field .icon{
   position: absolute;
+  display: block;
   top: 50%;
   margin-left: 14px;
   margin-top: 12px;
@@ -320,7 +322,8 @@ body {
    color: #000;  
 }
 
-.add-tag-field .icon{
+.add-tag-field .icon {
+  display: block;
   position: absolute;
   top: 50%;
   margin-left: 14px;
