Better parsing of search terms in the sidebar.

--- a/client/views/queue/sidebar/sidebar.html
+++ b/client/views/queue/sidebar/sidebar.html
@@ -9,6 +9,7 @@
         <li>@user</li>
         <li>#tag</li>
         <li>status:Closed</li>
+        <li>status:"In Progress"</li>
         <li>Printer</li>
       </ul>
     </small>
