--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -1,79 +1,84 @@
 <template name="ticketRow">
-<tr data-toggle="collapse" data-target="#row{{_id}}" class="accordion-toggle ticket-row" data-ticket="{{_id}}">
-  <td class="hidden-xs">
-    <span name="plusminus" class="glyphicon glyphicon-plus"></span>
-    {{#if repliedTo}}
-    <span class="glyphicon glyphicon-comment"></span>
-    {{/if}}
-    {{#if hasAttachment}}
-    <span class="glyphicon glyphicon-paperclip"></span>
-    {{/if}}
-    {{#if unread}}
-    <span class="glyphicon glyphicon-bell"></span>
-    {{/if}}
-  </td>
-  <td>{{title}}</td>
-  <td>
-    <div class="ticket-requester-portrait">
-      {{>userPortrait userId=this.authorId class="in-row"}}
-    </div>
-    {{authorName}}
-  </td>
-  <td class="hidden-xs">
-    {{#each associatedUserIds}}
-    {{>userPortrait userId=this associated=true class="in-row"}}
-    {{/each}}
-  </td>
-  <td>
-    <div class="dropdown" data-ticket="{{_id}}">
-      <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" name="statusButton" aria-expanded="false">{{status}}<span class="caret dropdown-toggle"></span></button>
-      <ul class="dropdown-menu" name="statusMenu" role="menu" aria-labelledby="ticketStatusDropdown">
-        <li role="presentation"><a role="menuitem" tabindex="-1">Open</a></li>
-        <li role="presentation"><a role="menuitem" tabindex="-1">Closed</a></li>
-        <li role="presentation" class="ticket-status-input"><input type="text" name="customStatus" placeholder="Or a custom status"></li>
-      </ul>
-    </div>
-  </td>
-  <td>{{>timeFromNow date=submittedTimestamp}}</td>
-</tr>
-<tr>
-  <td colspan='6' class="hiddenRow">
-    <div class="accordion-body collapse" id="row{{_id}}" data-ticket="{{_id}}">
-      <div class="panel panel-default ticket-row-panel">
-        <div class="panel-heading clearfix">
+  <tr data-toggle="collapse" data-target="#row{{_id}}" class="accordion-toggle ticket-row" data-ticket="{{_id}}">
+    <td class="hidden-xs">
+      <span name="plusminus" class="glyphicon glyphicon-plus"></span>
+      {{#if repliedTo}}
+        <span class="glyphicon glyphicon-comment"></span>
+      {{/if}}
+      {{#if hasAttachment}}
+        <span class="glyphicon glyphicon-paperclip"></span>
+      {{/if}}
+      {{#if unread}}
+        <span class="glyphicon glyphicon-bell"></span>
+      {{/if}}
+    </td>
+    <td>{{title}}</td>
+    <td>
+      <div class="ticket-requester-portrait">
+        {{>userPortrait userId=this.authorId class="in-row"}}
+      </div>
+      {{authorName}}
+    </td>
+    <td class="hidden-xs">
+      {{#each associatedUserIds}}
+        {{>userPortrait userId=this associated=true class="in-row"}}
+      {{/each}}
+    </td>
+    <td>
+      <div class="dropdown" data-ticket="{{_id}}">
+        <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" name="statusButton" aria-expanded="false">{{status}}<span class="caret dropdown-toggle"></span></button>
+        <ul class="dropdown-menu" name="statusMenu" role="menu" aria-labelledby="ticketStatusDropdown">
+          <li role="presentation"><a role="menuitem" tabindex="-1">Open</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1">Closed</a></li>
+          <li role="presentation" class="ticket-status-input"><input type="text" name="customStatus" placeholder="Or a custom status"></li>
+        </ul>
+      </div>
+    </td>
+    <td>{{>timeFromNow date=submittedTimestamp}}</td>
+  </tr>
+  <tr>
+    <td colspan='6' class="hiddenRow">
+      <div class="accordion-body collapse" id="row{{_id}}" data-ticket="{{_id}}">
+        <div class="col-md-3" style="border-right: 2px solid #eee;">
           {{> ticketHeading}}
+
+          {{> ticketInfoTable}}
         </div>
-        <div class="panel-body ticket-row-panel-body">
+        <div class="col-md-9" style="border-left: 2px solid #eee;">
+
+          {{#if blackbox}}
+            <div class="hidden-xs col-md-12 panel panel-default">
+              <div class="panel-heading">
+                <span name="moreInfoCollapse" class="glyphicon glyphicon-chevron-down"></span><a data-toggle="collapse" href="#info-panel-{{_id}}">More Info</a>
+              </div>
+              <div id="info-panel-{{_id}}" class="panel-collapse collapse in">
+                <div id="panel-body">
+                  <table class="table table-default">
+                    <tbody>
+                      {{#each arrayify formFields}}
+                        <tr>
+                          <td class="col-xs-2 col-md-2"><strong>{{name}}</strong></td>
+                          <td class="col-xs-10 col-md-10">{{value}}</td>
+                        </tr>
+                      {{/each}}
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          {{/if}}
 
           <blockquote>
             {{#each bodyParagraph}}
-            <p>{{this}}</p>
+              <p>{{this}}</p>
             {{/each}}
           </blockquote>
-
-          <div class="hidden-xs col-md-12">
-            <table class="table table-default">
-              <tbody>
-              {{#each arrayify formFields}}
-                <tr>
-                  <td class="col-xs-2 col-md-2"><strong>{{name}}</strong></td>
-                  <td class="col-xs-10 col-md-10">{{value}}</td>
-                </tr>
-              {{/each}}
-              </tbody>
-            </table>
-          </div>
-
-          {{> ticketInfoTable}}
-
           {{#each changelog}}
             {{> ticketChangelogItem}}
           {{/each}}
-
           {{> ticketNoteInput admin=true ticket=_id}}
         </div>
       </div>
-    </div>
-  </td>
-</tr>
+    </td>
+  </tr>
 </template>
